# codevista

./: .editorconfig  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml  welcome.yml
codevista/: __init__.py  analyzer.py  architecture.py  cli.py  code_age.py  codedna.py  config.py  decay.py  dependencies.py  export.py  git_analysis.py  integrations.py  languages.py  lint_rules.py  metrics.py  report.py  security.py  smells.py  tech_detector.py  trends.py  utils.py
codevista.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_analyzer.py  test_codedna.py  test_integrations.py  test_lint_rules.py  test_metrics.py  test_report.py  test_security.py  test_trends.py  test_utils.py
